--- a/resources/sass/layout/_top_nav.scss
+++ b/resources/sass/layout/_top_nav.scss
@@ -5,6 +5,7 @@
     grid-template: 'left . menus . right toggle' 48px / 1fr 40px auto 40px 1fr auto;
     align-items: center;
     padding: 0 14px;
+    overflow: visible;
 
     @media screen and (min-width: 767px) and (max-width: 1400px) {
         grid-template: 'ratio-bar ratio-bar ratio-bar ratio-bar ratio-bar ratio-bar' 24px 'left . menus . icon-bar toggle' 48px / 1fr 16px auto 24px 1fr auto;
@@ -137,6 +138,10 @@
     text-decoration: none;
 }
 
+.top-nav__dropdown {
+    position: relative;
+}
+
 @media (hover: none) {
     .top-nav__dropdown--nontouch {
         display: none !important;
@@ -179,7 +184,8 @@
 .top-nav__dropdown > ul {
     display: none;
     position: absolute;
-    top: calc(48px - 5px);
+    top: calc(100% - 5px);
+    left: 0;
     flex-direction: column;
     padding: 6px;
     row-gap: 6px;
